Squashed proof of stake commits (initial set):
       61604537f58ed2165268a07f6a5bf77470361cb4
       4850537fdf2b0c6e87722a7c2262c2da210f2574
       17e8d4ef606935421962c19a33504d3ccd27c669
       89844c26031f0d066f1b0921d3e6837dac6cdac8
       c7881e59630585f1f7b71c6fadfa10e928f1954f

--- a/src/qt/dash.qrc
+++ b/src/qt/dash.qrc
@@ -284,6 +284,10 @@
         <file alias="transaction_abandoned">res/icons/trad/transaction_abandoned.png</file>
         <file alias="network_disabled">res/icons/trad/network_disabled.png</file>
     </qresource>
+    <qresource prefix="/icons">
+        <file alias="staking_active">res/icons/staking_active.png</file>
+        <file alias="staking_inactive">res/icons/staking_inactive.png</file>
+    </qresource>
     <qresource prefix="/css">
         <file alias="drkblue">res/css/drkblue.css</file>
         <file alias="crownium">res/css/crownium.css</file>
