--- a/src/qt/res/css/standard.css
+++ b/src/qt/res/css/standard.css
@@ -1,5 +1,5 @@
 WalletFrame {
-border-image: url(':/images/drkblue/drkblue_walletFrame_bg') 0 0 0 0 stretch stretch;
+border-image: url(':/images/walletFrame_bg') 0 0 0 0 stretch stretch;
 border-top:0px solid #000;
 margin:0;
 padding:0;
@@ -40,25 +40,54 @@ color:#333;
 }
 
 QToolBar {
-background-color:#3398CC;
-border:0px solid #000;
-padding:0;
-margin:0;
+    background-color: #3398cc;
 }
 
 QToolBar > QToolButton {
-background-color:#3398CC;
-border:0px solid #333;
-min-height:2.5em;
-padding: 0em 1em;
-font-weight:bold;
-color:#fff;
+    background-color:transparent;
+    border: 0px;
+    height: 63px !important;
+    width: 120px;
+    color: #fff;
 }
 
 QToolBar > QToolButton:checked {
-background-color:#fff;
-color:#333;
-font-weight:bold;
+    background-color: rgba(67,67,67,0.5);
+}
+
+#toolbarIcon{
+    background: none;
+    margin: 15px 0px 0px 15px;
+}
+
+/* Global Button styles*/
+QPushButton {
+    background: transparent;
+    border: 1px solid #F4EA13;
+    color: #F4EA13;
+    border-radius: 18px;
+    height: 35px;
+    width: 180px;
+    font-weight: medium;
+    font-size: 16px;
+}
+
+QPushButton:hover, QPushButton:focus{
+    background: rgb(243,232,56) !important;
+    border: 1px solid rgb(243,232,56);
+    color: rgb(5,5,5);
+}
+
+QPushButton:disabled {
+    background: transparent !important;
+    border: 1px solid rgba(243,232,56,0.6);
+    color:rgb(100,100,100) !important;
+}
+
+QPushButton:pressed {
+    background: rgba(243,232,56, 0.3) !important;
+    border: 0px !important;
+    color: rgb(243,232,56) !important;
 }
 
 QMessageBox {
@@ -150,7 +179,7 @@ border:0px;
 }
 
 QComboBox::down-arrow {
-border-image: url(':/images/drkblue/drkblue_downArrow') 0 0 0 0 stretch stretch;
+border-image: url(':/images/downArrow') 0 0 0 0 stretch stretch;
 }
 
 QComboBox QListView {
@@ -205,7 +234,7 @@ padding-top:2px;
 }
 
 QAbstractSpinBox::up-arrow {
-image:url(':/images/drkblue/drkblue_upArrow_small');
+image:url(':/images/upArrow_small');
 }
 
 QAbstractSpinBox::down-button {
@@ -223,7 +252,7 @@ padding-bottom:2px;
 }
 
 QAbstractSpinBox::down-arrow {
-image:url(':/images/drkblue/drkblue_downArrow_small');
+image:url(':/images/downArrow_small');
 }
 
 QCheckBox {
@@ -236,35 +265,35 @@ height: 16px;
 }
 
 QCheckBox::indicator:unchecked {
-image:url(':/images/drkblue/unchecked');
+image:url(':/images/unchecked');
 }
 
 QCheckBox::indicator:unchecked:hover {
-image:url(':/images/drkblue/unchecked');
+image:url(':/images/unchecked');
 }
 
 QCheckBox::indicator:unchecked:pressed {
-image:url(':/images/drkblue/checked');
+image:url(':/images/checked');
 }
 
 QCheckBox::indicator:checked {
-image:url(':/images/drkblue/checked');
+image:url(':/images/checked');
 }
 
 QCheckBox::indicator:checked:hover {
-image:url(':/images/drkblue/checked');
+image:url(':/images/checked');
 }
 
 QCheckBox::indicator:checked:pressed {
-image:url(':/images/drkblue/unchecked');
+image:url(':/images/unchecked');
 }
 
 QCheckBox::indicator:indeterminate:hover {
-image:url(':/images/drkblue/unchecked');
+image:url(':/images/unchecked');
 }
 
 QCheckBox::indicator:indeterminate:pressed {
-image:url(':/images/drkblue/checked');
+image:url(':/images/checked');
 }
 
 /*******************************************************/
@@ -383,19 +412,19 @@ height:10px;
 }
 
 QScrollBar:up-arrow {
-background-image: url(':/images/drkblue/drkblue_upArrow_small');
+background-image: url(':/images/upArrow_small');
 }
 
 QScrollBar:down-arrow {
-background-image: url(':/images/drkblue/drkblue_downArrow_small');
+background-image: url(':/images/downArrow_small');
 }
 
 QScrollBar:left-arrow {
-background-image: url(':/images/drkblue/drkblue_leftArrow_small');
+background-image: url(':/images/leftArrow_small');
 }
 
 QScrollBar:right-arrow {
-background-image: url(':/images/drkblue/drkblue_rightArrow_small');
+background-image: url(':/images/rightArrow_small');
 }
 
 
@@ -505,7 +534,7 @@ background-color:#fff;
 }
 
 QDialog#SignVerifyMessageDialog QPushButton#pasteButton_SM { /* Paste Button */
-/* qproperty-icon: url(":/icons/drkblue/drkblue_editpaste"); */
+/* qproperty-icon: url(":/icons/editpaste"); */
 background-color:transparent;
 padding-left:15px;
 }
@@ -515,7 +544,6 @@ font-size:10px;
 }
 
 QDialog#SignVerifyMessageDialog QPushButton#copySignatureButton_SM { /* Copy Button */
-/* qproperty-icon: url(":/icons/drkblue/drkblue_editcopy"); */
 background-color:transparent;
 padding-left:10px;
 padding-right:10px;
@@ -1120,7 +1148,6 @@ min-width:410px;
 margin-right:20px;
 margin-left:0;
 margin-top:0;
-background-image: url(':/images/drkblue/dash_logo_horizontal');
 background-repeat:none;
 }
 
@@ -1170,7 +1197,7 @@ background-color:transparent;
 }
 
 QWidget#contentWidget { /* The actual content with the text/buttons/etc... */
-border-image: url(':/images/drkblue/drkblue_walletFrame_bg') 0 0 0 0 stretch stretch;
+border-image: url(':/images/walletFrame_bg') 0 0 0 0 stretch stretch;
 border-top:0px solid #000;
 margin:0;
 padding-top:20px;
@@ -1480,7 +1507,7 @@ color:#333;
 }
 
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::branch:selected { /* Coin Control Branch Icon */
-background-image: url(':/images/drkblue/drkblue_qtreeview_selected');
+background-image: url(':/images/qtreeview_selected');
 background-repeat:no-repeat;
 background-position:center;
 background-color:#f7f7f7;
@@ -1488,7 +1515,7 @@ color:#333;
 }
 
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::branch:checked { /* Coin Control Branch Icon */
-background-image: url(':/images/drkblue/drkblue_qtreeview_selected');
+background-image: url(':/images/qtreeview_selected');
 background-repeat:no-repeat;
 background-position:center;
 background-color:#f7f7f7;
