--- a/src/qt/dash_locale.qrc
+++ b/src/qt/dash_locale.qrc
@@ -18,6 +18,7 @@
         <file alias="sv">locale/dash_sv.qm</file>
         <file alias="th">locale/dash_th.qm</file>
         <file alias="tr">locale/dash_tr.qm</file>
+        <file alias="ua">locale/dash_ua.qm</file>
         <file alias="vi">locale/dash_vi.qm</file>
         <file alias="zh_CN">locale/dash_zh_CN.qm</file>
         <file alias="zh_TW">locale/dash_zh_TW.qm</file>
